# GAEMI

./: .gitignore  README.md  start_all.sh
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/: .gitignore
catkin_ws/src/gcs_esp32_controller/: CMakeLists.txt
catkin_ws/src/gcs_esp32_controller/launch/: robot_tilting_hello.launch  start_gcs_control.launch
catkin_ws/src/gcs_esp32_controller/scripts/: esp32_to_cmd_vel.py  height_control.py  hello.py  joystick_v2.py  keyboard_control.py  lds.py  reset_pose.py  rl_control.py  tilting.py
ec2/GCS_PC/QtTest/: ir_rgb.py  yolo_viewer.py
ec2/GCS_PC/ros2mqtt/: .gitignore  ros2mqtt.py
stream_ws/src/streamer/: CMakeLists.txt  package.xml
stream_ws/src/streamer/launch/: stream_launch.launch
stream_ws/src/streamer/scripts/: ros1yolortmp.py  ros1yolortmpir.py
y11_c202/: detect_y11.py  og.py
